--- a/index.html
+++ b/index.html
@@ -7,6 +7,19 @@
     <title>First Attempt</title>
 </head>
 <body>
-    
+    <header>
+        <div class="header-wrapper">
+            <h1 class="logo">Prottoy</h1>
+            <nav class="primary-nav">
+                <ul>
+                    <li><a href="#">Home</a></li>
+                    <li><a href="#">About</a></li>
+                    <li><a href="#">Services</a></li>
+                    <li><a href="#">Portfolio</a></li>
+                </ul>
+                <button class="primary-btn">Schedule a call</button>
+            </nav>
+        </div>
+    </header>
 </body>
 </html>
