Hero header section

--- a/index.html
+++ b/index.html
@@ -21,5 +21,26 @@
             </nav>
         </div>
     </header>
+    <section class="hero-header">
+        <div class="wrapper">
+            <div class="hero-header-container">
+                <h1>Crafting Exceptional
+                    <br><span>Digital Experiences</span>
+                </h1>
+                <p>
+                    Transform your ideas into reality with seamless designs, innovative solutions, and a touch of creativity tailored to your needs.
+                </p>
+                <div class="btn-set">
+                    <button class="primary-btn">Book A Call</button>
+                    <button class="secondary-btn">Download My CV</button>
+                </div>
+            </div>
+        </div>
+    </section>
+    <section class="about">
+        <div class="wrapper">
+            
+        </div>
+    </section>
 </body>
 </html>
