--- a/index.html
+++ b/index.html
@@ -38,8 +38,16 @@
         </div>
     </section>
     <section class="about">
-        <div class="wrapper">
-            
+        <div class="header-wrapper">
+            <img src="Images/profile-picture.png" alt="My Profile Picture">
+            <div class="about-content">
+                <h3>About Me</h3>
+                <h2>More Than 4+ Years of
+                    <br> Experienced</h2>
+                <p>
+                    I am Prottoy Modak, as a passionate web developer, I thrive on blending creativity and functionality to craft user-friendly digital experiences. With a solid foundation in HTML, CSS, and JavaScript, I am constantly honing my skills and exploring new trends in web development. My goal is to create designs that are both visually appealing and technically robust, ensuring seamless interactions for users.
+                </p>
+            </div>
         </div>
     </section>
 </body>
