--- a/index.html
+++ b/index.html
@@ -21,34 +21,68 @@
             </nav>
         </div>
     </header>
-    <section class="hero-header">
-        <div class="wrapper">
-            <div class="hero-header-container">
-                <h1>Crafting Exceptional
-                    <br><span>Digital Experiences</span>
-                </h1>
-                <p>
-                    Transform your ideas into reality with seamless designs, innovative solutions, and a touch of creativity tailored to your needs.
-                </p>
-                <div class="btn-set">
-                    <button class="primary-btn">Book A Call</button>
-                    <button class="secondary-btn">Download My CV</button>
+    <main>
+        <section class="hero-header">
+            <div class="wrapper">
+                <div class="hero-header-container">
+                    <h1>Crafting Exceptional
+                        <br><span>Digital Experiences</span>
+                    </h1>
+                    <p>
+                        Transform your ideas into reality with seamless designs, innovative solutions, and a touch of creativity tailored to your needs.
+                    </p>
+                    <div class="btn-set">
+                        <button class="primary-btn">Book A Call</button>
+                        <button class="secondary-btn">Download My CV</button>
+                    </div>
                 </div>
             </div>
-        </div>
-    </section>
-    <section class="about">
-        <div class="header-wrapper">
-            <img src="Images/profile-picture.png" alt="My Profile Picture">
-            <div class="about-content">
-                <h3>About Me</h3>
-                <h2>More Than 4+ Years of
-                    <br> Experienced</h2>
-                <p>
-                    I am Prottoy Modak, as a passionate web developer, I thrive on blending creativity and functionality to craft user-friendly digital experiences. With a solid foundation in HTML, CSS, and JavaScript, I am constantly honing my skills and exploring new trends in web development. My goal is to create designs that are both visually appealing and technically robust, ensuring seamless interactions for users.
-                </p>
+        </section>
+        <section class="about">
+            <div class="header-wrapper">
+                <img src="Images/profile-picture.png" alt="My Profile Picture" class="pp">
+                <div class="about-content">
+                    <h3>About Me</h3>
+                    <h2>More Than 4+ Years of
+                        <br> Experienced</h2>
+                    <p>
+                        I am Prottoy Modak, as a passionate web developer, I thrive on blending creativity and functionality to craft user-friendly digital experiences. With a solid foundation in HTML, CSS, and JavaScript, I am constantly honing my skills and exploring new trends in web development. My goal is to create designs that are both visually appealing and technically robust, ensuring seamless interactions for users.
+                    </p>
+
+                    <button class="primary-btn">Download CV</button>
+                </div>
             </div>
-        </div>
-    </section>
+        </section>
+        <section class="skills">
+            <div class="wrapper">
+                <div class="left-side">
+                    <h3 class="blue-header">Creative and Professional Skills
+                        <br>Experience on Few Area</h3>
+                    <p>
+                        With a blend of creativity and professionalism, I bring expertise across a diverse range of areas. My experience spans crafting visually engaging designs, optimizing web functionality, and implementing user-focused solutions.
+                    </p>
+                    <button class="secondary-btn">Got Any Project?</button>
+                </div>
+                <div class="right-side">
+                    <div class="skill-bar">
+                        <label for="for-webdesign">Web Development</label>
+                        <progress max="100" value="95"></progress>
+                    </div>
+                    <div class="skill-bar">
+                        <label for="for-ui/ux">UI/UX Designing</label>
+                        <progress max="100" value="75"></progress>
+                    </div>
+                    <div class="skill-bar">
+                        <label for="for-wordpress">Wordpress</label>
+                        <progress max="100" value="90"></progress>
+                    </div>
+                    <div class="skill-bar">
+                        <label for="for-seo">Search Engine Optimization</label>
+                        <progress max="100" value="60"></progress>
+                    </div>
+                </div>
+            </div>
+        </section>
+    </main>
 </body>
 </html>
