Tools (using grid)

--- a/index.html
+++ b/index.html
@@ -83,6 +83,25 @@
                 </div>
             </div>
         </section>
+        <section class="tools">
+            <div class="wrapper">
+                <div>
+                    <h2>Tools I Am Skilled In</h2>
+                    <div class="tool-icons">
+                        <img src="/Images/Icon-packs/html.png" alt="">
+                        <img src="/Images/Icon-packs/css.png" alt="">
+                        <img src="/Images/Icon-packs/js.png" alt="">
+                        <img src="/Images/Icon-packs/wordpress.png" alt="">
+                        <img src="/Images/Icon-packs/elementor.png" alt="">
+                        <img src="/Images/Icon-packs/figma.png" alt="">
+                        <img src="/Images/Icon-packs/VIdIQ.png" alt="">
+                        <img src="/Images/Icon-packs/photoshop.png" alt="">
+                        <img src="/Images/Icon-packs/premier-pro.png" alt="">
+                        <img src="/Images/Icon-packs/animate.png" alt="">
+                    </div>
+                </div>
+            </div>
+        </section>
     </main>
 </body>
 </html>
