--- a/index.html
+++ b/index.html
@@ -102,6 +102,40 @@
                 </div>
             </div>
         </section>
+        <section class="services">
+            <div class="wrapper">
+                <div class="service-content">
+                    <h3>Services</h3>
+                    <h2>Awsome Services For You</h2>
+                    <div class="service-cards">
+                        <div class="cards">
+                            <h3>Web Design</h3>
+                            <p>
+                                Exceptional web design crafted to elevate your digital presence.
+                            </p>
+                        </div>
+                        <div class="cards">
+                            <h3>UI/UX Design</h3>
+                            <p>
+                                Delivering intuitive and engaging UI/UX designs that enhance user experiences.
+                            </p>
+                        </div>
+                        <div class="cards">
+                            <h3>Wordpress</h3>
+                            <p>
+                                Creating dynamic and responsive websites with WordPress expertise.
+                            </p>
+                        </div>
+                        <div class="cards">
+                            <h3>SEO</h3>
+                            <p>
+                                Enhancing online visibility with effective and strategic SEO solutions.
+                            </p>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </section>
     </main>
 </body>
 </html>
