--- a/index.html
+++ b/index.html
@@ -137,5 +137,8 @@
             </div>
         </section>
     </main>
+    <footer>
+        <h3>©2025 Strexor, All Rights Reserved</h3>
+    </footer>
 </body>
 </html>
